@@ -348,9 +348,6 @@
 1117 2016- 5- 6 OpeTemplateTreeView: have an indicator that this ope
                 template is used as a recurrent model
 
-1119 2016- 5- 7 BUG Recurrent: when generating recurrent operations from
-                model for the first time, the first model is generated twice
-
 1120 2016- 5- 7 BUG Recurrent: when validating waiting operations on an
                 n-1 selection, lot of warnings+critical + one selected
                 line is not validated (but entries are actually generated)
@@ -365,7 +362,10 @@
 1126 2016- 5- 7 Recurrent: display generated entries, letting the user
                 confirm them before dbms insertion
 
-1127
+1127 2016- 5- 7 TVAFormProperties: ope template identifier change is not
+                properly propagated to treeview
+
+1128
 
 -----------------------------------------------------------------------
  DONE
@@ -1333,6 +1333,10 @@
 
 1118 2016- 5- 6 BUG Periodicity: has twice 30
      2016- 5- 7 fixed
+
+1119 2016- 5- 7 BUG Recurrent: when generating recurrent operations from
+                model for the first time, the first model is generated twice
+     2016- 5- 9 fixed
 
 1123 2016- 5- 7 when generating entries, have an operation number
      2016- 5- 8 done
